--- a/style.css
+++ b/style.css
@@ -35,6 +35,16 @@ img {
   margin: auto 20px auto 20px;
 }
 
+.photo {
+  margin: auto 20px auto 20px;
+  max-height: 300px;
+}
+
+.small-photo {
+  margin: auto 20px auto 20px;
+  max-height: 150px;
+}
+
 .breaking-line-img {
   display: block;
   padding-top: 20px;
