--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ a {
   color: #00ffff;
 }
 
+.a-light {
+  color: hsl(283, 100%, 71%);
+}
+
 body {
 	max-width: 800px;
   margin: 100px auto 100px auto;
@@ -42,7 +46,7 @@ img {
 
 .small-photo {
   margin: auto 20px auto 20px;
-  max-height: 150px;
+  max-height: 110px;
 }
 
 .breaking-line-img {
