--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .background-strange-aeons {
-	background: url('img/background.gif');
+	background: url('img/background-left.gif');
 	background-repeat: repeat;
 }
 
