--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
 	background-repeat: repeat;
 }
 
+.background-a-closetful-of-scares {
+	background: url('img/wardrobe.gif');
+	background-repeat: repeat;
+}
+
 a {
   color: #00ffff;
 }
@@ -47,6 +52,13 @@ body {
   border-style: ridge;
   border-color: cyan;
   font-family: 'StrangeAeons',
+}
+
+.body-acos {
+	color: yellow;
+	background: black;
+  border-width: 8px;
+  border-image: url("img/bloodline.gif") 100 / 19px;
 }
 
 img {
